--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
   "devDependencies": {
     "gh-pages": "^6.1.1"
   },
-  "homepage": "https://brelieu05.github.io/wizard101-damage-calculator/"
+  "homepage": "https://myusername.github.io/my-app"
 }
